--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ td {
     color: black;
     font-family: "open sans";
     font-size: 55px;
+    padding: 15px 0 15px 20px;
+    box-shadow: -5px 5px black;
 }
 
 .black-turn-text {
@@ -39,6 +41,9 @@ td {
     font-family: "open sans";
     font-size: 55px;
     color: lightgray;
+    padding: 15px 20px 15px 0;
+    /* box-shadow: 5px 5px black; */
+    opacity: .2;
 }
 
 .black-piece {
